Twelfth audit pass: peer-token scoping, WASM determinism, wallet hardening
Consensus
- Height-gate every rule change behind consensusV2Height / powUpgradeHeight:
  median-of-3 retarget bounds, the miner-revenue fee floor and the
  zero-amount deposit skip no longer re-interpret already-accepted blocks.
- Pufferfish2 costs become a scheduled parameter (PowCosts) and re-key the
  hash cache, so two live cost pairs cannot cross-serve across the upgrade.
- Persist referenced uncle bodies at accept time; sync fetches missing
  uncles before retrying a block instead of rejecting the peer.
- Amortise difficultyForNext with a boundary-hash-invalidated memo.

VM
- Cap every host buffer at a fixed network constant before allocation and
  reject float/SIMD in global init expressions and element segments: both
  were heap- or engine-dependent fork vectors.
- Whitelist the import/export ABI; bound retained logs by count and bytes.
- A node-level OOM is now fatal, never normalised to out-of-gas, and
  Executor aborts the block sessions cleanly before rethrowing.

Network
- RHIZOME_PEER_TOKEN is presented only to operator-configured peers, and
  only over https (PeerTokenPolicy). The registry is fed by unauthenticated
  PEX, so the previous send-to-everyone behaviour leaked the shared secret.
- Complete the SSRF host filter for v4-mapped, NAT64, 6to4 and Teredo
  encodings; canonicalise peer URLs through PeerUrls.
- Sliding-window rate limiting; bounded /add_peer announce bodies.

Node
- Push-abuse strikes use an explicit provable-junk whitelist so honest
  gossip (unseen uncles, consumed nonces, clock drift) is never throttled.
- /orphan joins the consensus-lock read budget; the token check precedes
  the aggregate gates; snapshot chunks spool to disk and the spool is
  deleted on every failure path.

Wallet
- scrypt envelopes, owner-only files from creation, no String ever holds
  the seed, plaintext saves fail closed when non-interactive, and the TOFU
  chainId pin is sealed in