@@ -25,11 +25,14 @@ public final class Wallet {
     private final PrivateKey privateKey;
     private final PublicKey publicKey;
     private final PublicAddress address;
+    /** TOFU chainId pin read from the key file at load, or null when the file has none. */
+    private final TofuPin chainIdPin;
 
-    private Wallet(PrivateKey privateKey, PublicKey publicKey) {
+    private Wallet(PrivateKey privateKey, PublicKey publicKey, TofuPin chainIdPin) {
         this.privateKey = privateKey;
         this.publicKey = publicKey;
         this.address = PublicAddress.of(publicKey);
+        this.chainIdPin = chainIdPin;
     }
 
     public static Wallet create() {
@@ -39,8 +42,23 @@ public final class Wallet {
     }
 
     private static Wallet fromPrivate(PrivateKey privateKey) {
+        return fromPrivate(privateKey, null);
+    }
+
+    private static Wallet fromPrivate(PrivateKey privateKey, TofuPin chainIdPin) {
         Ed25519PublicKeyParameters pub = privateKey.key().generatePublicKey();
-        return new Wallet(privateKey, PublicKey.of(pub));
+        return new Wallet(privateKey, PublicKey.of(pub), chainIdPin);
+    }
+
+    /**
+     * The TOFU chainId pin read from the key file this wallet was loaded from (null when the
+     * file has none — first use). On an ENCRYPTED file the pin is read from inside the sealed
+     * GCM payload, so it is as tamper-proof as the seed itself; a legacy file carrying the pin
+     * as cleartext metadata next to the envelope still yields it (it is migrated into the
+     * envelope at the next {@link #saveChainIdPin}).
+     */
+    public TofuPin chainIdPin() {
+        return chainIdPin;
     }
 
     public PublicAddress address() {
@@ -72,6 +90,13 @@ public final class Wallet {
     private static final String PASSPHRASE_ENV = "RHIZOME_WALLET_PASSPHRASE";
 
     /**
+     * Env var that explicitly allows writing an UNENCRYPTED key file in non-interactive mode
+     * (value {@code 1}). Without it (or the CLI's {@code --plaintext}), {@link #save} refuses to
+     * write a plaintext seed when no passphrase can be resolved and no console exists (audit S-3).
+     */
+    private static final String PLAINTEXT_ENV = "RHIZOME_WALLET_PLAINTEXT";
+
+    /**
      * Resolves the key-file passphrase by precedence: explicit argument (the CLI's
      * {@code --passphrase-file}) > interactive console prompt when a console exists >
      * {@value #PASSPHRASE_ENV} (documented last resort — visible in {@code /proc/<pid>/environ},
@@ -94,25 +119,36 @@ public final class Wallet {
     /**
      * Persists the key. When a passphrase is available (see {@link #resolvePassphrase}) the seed
      * is sealed with AES-256-GCM under a PBKDF2-derived key, so the file on disk never exposes a
-     * spendable key; otherwise it is written as before (backward compatible).
+     * spendable key. Without a passphrase, writing the seed in clear requires an explicit opt-in
+     * (see {@link #save(Path, char[], boolean)}).
      */
     public void save(Path keyFile) throws IOException {
-        save(keyFile, null);
+        save(keyFile, null, false);
     }
 
     /** As {@link #save(Path)} but with an explicit passphrase (empty/null = plaintext). */
     public void save(Path keyFile, char[] passphrase) throws IOException {
-        char[] plaintext = seedJsonChars();
+        save(keyFile, passphrase, false);
+    }
+
+    /**
+     * As {@link #save(Path, char[])}; {@code allowPlaintext} (the CLI's {@code --plaintext}, or
+     * {@value #PLAINTEXT_ENV}{@code =1}) explicitly permits an unencrypted key file when no
+     * passphrase is available. Without that opt-in a plaintext write is REFUSED in
+     * non-interactive mode (no console): a silently unencrypted seed on disk is spendable by
+     * anyone who reads it (audit S-3). Interactive sessions keep the loud warning and must
+     * confirm.
+     */
+    public void save(Path keyFile, char[] passphrase, boolean allowPlaintext) throws IOException {
+        char[] plaintext = seedJsonChars(null, null);
         char[] pass = resolvePassphrase(passphrase);
         try {
             if (pass == null) {
-                // A plaintext seed on disk (0600 or not) is a spendable key in any backup, snapshot,
-                // synced dotfile or image layer. Refuse to do it silently — warn loudly (audit S-3).
-                System.err.println("WARNING: writing wallet private key UNENCRYPTED to " + keyFile
-                    + " — set " + PASSPHRASE_ENV + " to encrypt the key at rest (AES-256-GCM).");
+                checkPlaintextAllowed(keyFile, allowPlaintext);
+                writeOwnerOnly(keyFile, plaintext);
+            } else {
+                writeOwnerOnly(keyFile, WalletKeystore.encrypt(plaintext, pass));
             }
-            String content = pass == null ? new String(plaintext) : WalletKeystore.encrypt(plaintext, pass);
-            writeOwnerOnly(keyFile, content);
         } finally {
             java.util.Arrays.fill(plaintext, '\0');
             if (pass != null) {
@@ -121,13 +157,36 @@ public final class Wallet {
         }
     }
 
+    private static void checkPlaintextAllowed(Path keyFile, boolean allowPlaintext) throws IOException {
+        if (allowPlaintext || "1".equals(System.getenv(PLAINTEXT_ENV))) {
+            System.err.println("WARNING: writing wallet private key UNENCRYPTED to " + keyFile
+                + " — set " + PASSPHRASE_ENV + " to encrypt the key at rest (AES-256-GCM).");
+            return;
+        }
+        java.io.Console console = System.console();
+        if (console == null) {
+            // Non-interactive (script, cron, CI): nobody can answer a prompt, so a plaintext
+            // seed would hit the disk with only a warning nobody reads. Fail closed instead.
+            throw new IOException("refusing to write the wallet private key UNENCRYPTED in "
+                + "non-interactive mode: pass --plaintext or set " + PLAINTEXT_ENV + "=1 to "
+                + "override, or supply a passphrase (--passphrase-file / " + PASSPHRASE_ENV + ")");
+        }
+        System.err.println("WARNING: writing wallet private key UNENCRYPTED to " + keyFile
+            + " — anyone who can read this file can spend from it.");
+        String confirm = console.readLine("type 'yes' to write the key UNENCRYPTED: ");
+        if (confirm == null || !confirm.trim().equalsIgnoreCase("yes")) {
+            throw new IOException("aborted: not writing an unencrypted wallet key to " + keyFile);
+        }
+    }
+
     /**
      * Builds the plaintext key JSON as a wipeable {@code char[]} — not via
      * {@link JSONObject#toString}, whose immutable Strings would pin the seed hex on the heap
      * until GC (audit F4). Only the secret half is handled as chars; the public key and address
-     * are not sensitive.
+     * are not sensitive. {@code chainId}/{@code nodeUrl} carry the TOFU pin (audit F2) and are
+     * omitted when null.
      */
-    private char[] seedJsonChars() {
+    private char[] seedJsonChars(Integer chainId, String nodeUrl) {
         byte[] seed = privateKey.toBytes();
         char[] seedHex = new char[seed.length * 2];
         try {
@@ -137,7 +196,14 @@ public final class Wallet {
             }
             String head = "{\n  \"privateKey\": \"";
             String tail = "\",\n  \"publicKey\": \"" + publicKey.toHexString()
-                + "\",\n  \"address\": \"" + address.toHexString() + "\"\n}";
+                + "\",\n  \"address\": \"" + address.toHexString() + "\"";
+            if (chainId != null) {
+                // nodeUrl is written verbatim: node URLs never contain characters that JSON
+                // string escaping would alter (no quotes/backslashes).
+                tail += ",\n  \"chainId\": " + chainId
+                    + ",\n  \"nodeUrl\": \"" + (nodeUrl == null ? "" : nodeUrl) + "\"";
+            }
+            tail += "\n}";
             char[] json = new char[head.length() + seedHex.length + tail.length()];
             head.getChars(0, head.length(), json, 0);
             System.arraycopy(seedHex, 0, json, head.length(), seedHex.length);
@@ -155,31 +221,67 @@ public final class Wallet {
      * Writes the key file so it is readable only by its owner (mode {@code 0600}), never briefly
      * world-readable. Without this the file inherited the process umask (typically {@code 0644}),
      * so any local user could read an unencrypted Ed25519 seed and steal the funds (audit H5). On
-     * POSIX the file is created (or a temp file is created then atomically moved) with owner-only
-     * permissions; on non-POSIX filesystems it falls back to the {@code File} permission API.
+     * POSIX the content goes to a temp file created with owner-only permissions in the same
+     * directory, then is moved over the target (atomically where the filesystem supports it); on
+     * non-POSIX filesystems the file is created EMPTY, restricted to the owner, and only then
+     * written — restricting AFTER the write would leave a window where the seed sits on disk
+     * with default (often world-readable) permissions.
      */
     private static void writeOwnerOnly(Path keyFile, String content) throws IOException {
+        byte[] bytes = content.getBytes(StandardCharsets.UTF_8);
+        writeOwnerOnlyBytes(keyFile, bytes); // caller-owned content holds no key material
+    }
+
+    /** As {@link #writeOwnerOnly(Path, String)} but never materializes the content as a String. */
+    private static void writeOwnerOnly(Path keyFile, char[] content) throws IOException {
+        byte[] bytes = WalletKeystore.utf8Encode(content);
+        try {
+            writeOwnerOnlyBytes(keyFile, bytes);
+        } finally {
+            java.util.Arrays.fill(bytes, (byte) 0);
+        }
+    }
+
+    private static void writeOwnerOnlyBytes(Path keyFile, byte[] content) throws IOException {
         try {
             var ownerOnly = java.nio.file.attribute.PosixFilePermissions.fromString("rw-------");
             Path dir = keyFile.toAbsolutePath().getParent();
             Path tmp = Files.createTempFile(dir, ".wallet", ".tmp",
                 java.nio.file.attribute.PosixFilePermissions.asFileAttribute(ownerOnly));
             try {
-                Files.writeString(tmp, content, StandardCharsets.UTF_8);
-                Files.move(tmp, keyFile, java.nio.file.StandardCopyOption.REPLACE_EXISTING);
+                Files.write(tmp, content);
+                try {
+                    Files.move(tmp, keyFile,
+                        java.nio.file.StandardCopyOption.ATOMIC_MOVE,
+                        java.nio.file.StandardCopyOption.REPLACE_EXISTING);
+                } catch (java.nio.file.AtomicMoveNotSupportedException notAtomic) {
+                    Files.move(tmp, keyFile, java.nio.file.StandardCopyOption.REPLACE_EXISTING);
+                }
             } catch (IOException e) {
                 Files.deleteIfExists(tmp);
                 throw e;
             }
         } catch (UnsupportedOperationException nonPosix) {
-            // Non-POSIX (e.g. Windows): best-effort owner-only via the File API.
-            Files.writeString(keyFile, content, StandardCharsets.UTF_8);
-            java.io.File f = keyFile.toFile();
-            f.setReadable(false, false);
-            f.setWritable(false, false);
-            f.setReadable(true, true);
-            f.setWritable(true, true);
+            // Non-POSIX (e.g. Windows): create the file EMPTY, restrict it to the owner, then
+            // stream the content into the SAME file (newOutputStream opens, never re-creates, so
+            // the restrictive ACL cannot be reset by a create-with-default-permissions).
+            if (Files.notExists(keyFile)) {
+                Files.createFile(keyFile);
+            }
+            restrictToOwner(keyFile);
+            try (var out = Files.newOutputStream(keyFile)) {
+                out.write(content);
+            }
         }
+    }
+
+    /** Best-effort owner-only ACL via the {@code File} API (non-POSIX fallback). */
+    private static void restrictToOwner(Path keyFile) {
+        java.io.File f = keyFile.toFile();
+        f.setReadable(false, false);
+        f.setWritable(false, false);
+        f.setReadable(true, true);
+        f.setWritable(true, true);
     }
 
     public static Wallet load(Path keyFile) throws IOException {
@@ -188,30 +290,260 @@ public final class Wallet {
 
     /** As {@link #load(Path)} but with an explicit passphrase (empty/null = none). */
     public static Wallet load(Path keyFile, char[] passphrase) throws IOException {
-        String content = Files.readString(keyFile, StandardCharsets.UTF_8);
-        char[] decrypted = null;
-        if (WalletKeystore.isEncrypted(content)) {
-            char[] pass = resolvePassphrase(passphrase);
-            if (pass == null) {
-                throw new IOException("wallet file is encrypted; supply --passphrase-file, "
-                    + "a console passphrase, or set " + PASSPHRASE_ENV + " to load it");
-            }
-            try {
-                decrypted = WalletKeystore.decrypt(content, pass);
-            } finally {
-                java.util.Arrays.fill(pass, '\0');
-            }
-        } else {
-            warnIfGroupOrOtherReadable(keyFile);
-        }
+        // The seed travels only through wipeable arrays: file bytes -> char[] -> raw seed bytes
+        // -> PrivateKey (which copies them internally). No String ever holds the plaintext seed,
+        // so nothing sensitive is pinned on the heap until GC (audit F4). org.json is only ever
+        // given the ENCRYPTED envelope, which contains no key material.
+        char[] content = readChars(keyFile);
+        char[] plaintext = null;
+        byte[] seed = null;
         try {
-            JSONObject json = decrypted != null
-                ? new JSONObject(new String(decrypted)) : new JSONObject(content);
-            return fromPrivate(PrivateKey.of(json.getString("privateKey")));
-        } finally {
-            if (decrypted != null) {
-                java.util.Arrays.fill(decrypted, '\0');
+            TofuPin pin;
+            if (WalletKeystore.isEncrypted(content)) {
+                char[] pass = resolvePassphrase(passphrase);
+                if (pass == null) {
+                    throw new IOException("wallet file is encrypted; supply --passphrase-file, "
+                        + "a console passphrase, or set " + PASSPHRASE_ENV + " to load it");
+                }
+                try {
+                    plaintext = WalletKeystore.decrypt(new String(content), pass);
+                } finally {
+                    java.util.Arrays.fill(pass, '\0');
+                }
+                // The pin lives INSIDE the sealed payload (audit: TOFU pin outside the GCM
+                // envelope was rewritable without the passphrase). A file written by the
+                // previous version may still carry it as cleartext metadata next to the
+                // envelope — read it from there so verification keeps working until the next
+                // saveChainIdPin migrates it into the envelope.
+                pin = extractPin(plaintext);
+                if (pin == null) {
+                    pin = extractPin(content);
+                }
+            } else {
+                warnIfGroupOrOtherReadable(keyFile);
+                plaintext = content;
+                pin = extractPin(plaintext);
             }
+            seed = extractPrivateKeySeed(plaintext);
+            return fromPrivate(PrivateKey.of(seed), pin);
+        } finally {
+            java.util.Arrays.fill(content, '\0');
+            if (plaintext != null && plaintext != content) {
+                java.util.Arrays.fill(plaintext, '\0');
+            }
+            if (seed != null) {
+                java.util.Arrays.fill(seed, (byte) 0);
+            }
+        }
+    }
+
+    /** Reads a key file into a wipeable {@code char[]} (UTF-8, no String intermediate). */
+    private static char[] readChars(Path keyFile) throws IOException {
+        byte[] bytes = Files.readAllBytes(keyFile);
+        try {
+            return WalletKeystore.utf8Decode(bytes);
+        } finally {
+            java.util.Arrays.fill(bytes, (byte) 0);
+        }
+    }
+
+    /**
+     * Decodes the hex {@code "privateKey"} field straight from the JSON chars into raw seed
+     * bytes, so the seed never exists as a String (audit F4). The scanner is deliberately
+     * minimal — no escape decoding — which covers everything the wallet itself writes (hex,
+     * integers, URLs); a hand-edited file using JSON escapes in these fields is rejected.
+     */
+    private static byte[] extractPrivateKeySeed(char[] json) throws IOException {
+        int[] range = jsonFieldValueRange(json, "privateKey");
+        if (range == null) {
+            throw new IOException("wallet key file has no \"privateKey\" field");
+        }
+        if (range[1] - range[0] != PrivateKey.SIZE * 2) {
+            throw new IOException("wallet \"privateKey\" must be " + (PrivateKey.SIZE * 2)
+                + " hex characters, got " + (range[1] - range[0]));
+        }
+        byte[] seed = new byte[PrivateKey.SIZE];
+        try {
+            for (int i = 0; i < seed.length; i++) {
+                int hi = hexValue(json[range[0] + 2 * i]);
+                int lo = hexValue(json[range[0] + 2 * i + 1]);
+                if (hi < 0 || lo < 0) {
+                    throw new IOException("wallet \"privateKey\" field is not valid hex");
+                }
+                seed[i] = (byte) ((hi << 4) | lo);
+            }
+            return seed;
+        } catch (IOException e) {
+            java.util.Arrays.fill(seed, (byte) 0);
+            throw e;
+        }
+    }
+
+    private static int hexValue(char c) {
+        if (c >= '0' && c <= '9') return c - '0';
+        if (c >= 'a' && c <= 'f') return c - 'a' + 10;
+        if (c >= 'A' && c <= 'F') return c - 'A' + 10;
+        return -1;
+    }
+
+    /**
+     * Locates {@code "name" : <value>} and returns the {@code [start, end)} range of the raw
+     * value chars (string contents without the quotes, or the bare number token), or null when
+     * the field is absent. Heuristic, escape-free — see {@link #extractPrivateKeySeed}.
+     */
+    private static int[] jsonFieldValueRange(char[] json, String name) {
+        for (int i = 0; i + name.length() + 2 <= json.length; i++) {
+            if (json[i] != '"') {
+                continue;
+            }
+            int j = i + 1;
+            boolean match = true;
+            for (int k = 0; k < name.length(); k++, j++) {
+                if (json[j] != name.charAt(k)) {
+                    match = false;
+                    break;
+                }
+            }
+            if (!match || json[j] != '"') {
+                continue;
+            }
+            j++;
+            while (j < json.length && Character.isWhitespace(json[j])) j++;
+            if (j >= json.length || json[j] != ':') {
+                continue;
+            }
+            j++;
+            while (j < json.length && Character.isWhitespace(json[j])) j++;
+            if (j >= json.length) {
+                return null;
+            }
+            if (json[j] == '"') {
+                int start = ++j;
+                while (j < json.length && json[j] != '"') j++;
+                return new int[] {start, j};
+            }
+            int start = j;
+            while (j < json.length && json[j] != ',' && json[j] != '}'
+                && !Character.isWhitespace(json[j])) j++;
+            return new int[] {start, j};
+        }
+        return null;
+    }
+
+    /**
+     * Trust-on-first-use pin recorded in the key file: the chainId (and node URL) this wallet
+     * first signed for. The node's /info answer is unauthenticated, so the wallet would
+     * otherwise sign whatever chainId any hostile/MITM'd node returns — replaying the
+     * transaction onto a different chain (audit F2).
+     */
+    public record TofuPin(int chainId, String nodeUrl) {}
+
+    /**
+     * The TOFU pin stored as CLEARTEXT in {@code keyFile}, or null when the file has no
+     * cleartext pin. This covers plaintext key files and legacy encrypted files written by the
+     * previous version (pin as metadata next to the envelope). It CANNOT read a pin sealed
+     * inside the GCM envelope — callers that need the pin of an encrypted file must go through
+     * the loaded wallet ({@code Wallet.load(keyFile, pass).chainIdPin()}).
+     */
+    public static TofuPin readChainIdPin(Path keyFile) throws IOException {
+        char[] content = readChars(keyFile);
+        try {
+            return extractPin(content);
+        } finally {
+            java.util.Arrays.fill(content, '\0');
+        }
+    }
+
+    /**
+     * Extracts the {@code chainId}/{@code nodeUrl} pin fields from key-file JSON chars, or null
+     * when absent. Works on any JSON the wallet writes (plaintext payload or legacy envelope
+     * metadata); a sealed payload is base64 and never matches.
+     */
+    private static TofuPin extractPin(char[] json) throws IOException {
+        int[] range = jsonFieldValueRange(json, "chainId");
+        if (range == null) {
+            return null;
+        }
+        int chainId;
+        try {
+            chainId = Integer.parseInt(new String(json, range[0], range[1] - range[0]));
+        } catch (NumberFormatException e) {
+            throw new IOException("wallet key file has a non-numeric \"chainId\" field");
+        }
+        String nodeUrl = null;
+        int[] urlRange = jsonFieldValueRange(json, "nodeUrl");
+        if (urlRange != null) {
+            nodeUrl = new String(json, urlRange[0], urlRange[1] - urlRange[0]);
+        }
+        return new TofuPin(chainId, nodeUrl);
+    }
+
+    /**
+     * Records (or replaces) the TOFU pin in the key file. On an ENCRYPTED file the pin lives
+     * INSIDE the sealed GCM payload, so updating it requires the passphrase: the envelope is
+     * decrypted (authenticating both the passphrase and the file — a tampered file fails here),
+     * the pin is set in the payload and the whole file is re-sealed (audit: a pin stored as
+     * cleartext metadata was rewritable by anyone with write access to the file, letting a
+     * hostile node steer signatures onto another chain). A legacy cleartext pin next to the
+     * envelope is migrated into the envelope at this point. On a PLAINTEXT file the pin stays
+     * in the clear JSON — the seed itself is in clear there, so forgery is already total;
+     * encryption is what gives the pin its integrity. Owner-only permissions are preserved.
+     *
+     * @param passphrase required if and only if the file is encrypted; wiped after use
+     */
+    public void saveChainIdPin(Path keyFile, int chainId, String nodeUrl, char[] passphrase)
+            throws IOException {
+        char[] content = readChars(keyFile);
+        try {
+            if (WalletKeystore.isEncrypted(content)) {
+                char[] pass = resolvePassphrase(passphrase);
+                if (pass == null) {
+                    throw new IOException("updating the chainId pin on an encrypted key file "
+                        + "requires the passphrase (the pin is sealed inside the encrypted "
+                        + "payload so it cannot be forged without it); supply --passphrase-file, "
+                        + "a console passphrase, or set " + PASSPHRASE_ENV);
+                }
+                try {
+                    // Decrypt first: authenticates the passphrase AND the file (GCM), so a
+                    // forged envelope is detected before we re-seal anything.
+                    char[] decrypted = WalletKeystore.decrypt(new String(content), pass);
+                    byte[] sealedSeed = null;
+                    byte[] ownSeed = null;
+                    try {
+                        sealedSeed = extractPrivateKeySeed(decrypted);
+                        ownSeed = privateKey.toBytes();
+                        if (!java.util.Arrays.equals(sealedSeed, ownSeed)) {
+                            throw new IOException("refusing to re-seal " + keyFile
+                                + ": the decrypted key does not match this wallet");
+                        }
+                    } finally {
+                        java.util.Arrays.fill(decrypted, '\0');
+                        if (sealedSeed != null) {
+                            java.util.Arrays.fill(sealedSeed, (byte) 0);
+                        }
+                        if (ownSeed != null) {
+                            java.util.Arrays.fill(ownSeed, (byte) 0);
+                        }
+                    }
+                    char[] json = seedJsonChars(chainId, nodeUrl);
+                    try {
+                        writeOwnerOnly(keyFile, WalletKeystore.encrypt(json, pass));
+                    } finally {
+                        java.util.Arrays.fill(json, '\0');
+                    }
+                } finally {
+                    java.util.Arrays.fill(pass, '\0');
+                }
+            } else {
+                char[] json = seedJsonChars(chainId, nodeUrl);
+                try {
+                    writeOwnerOnly(keyFile, json);
+                } finally {
+                    java.util.Arrays.fill(json, '\0');
+                }
+            }
+        } finally {
+            java.util.Arrays.fill(content, '\0');
         }
     }
 
