@@ -1,7 +1,6 @@
 package rhizome.wallet;
 
 import java.math.BigDecimal;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 
@@ -27,8 +26,16 @@ import rhizome.core.transaction.TransactionKind;
  *   --passphrase-file &lt;path&gt;   key-file passphrase from a file (else console prompt, else
  *                               RHIZOME_WALLET_PASSPHRASE — last resort, visible in /proc/&lt;pid&gt;/environ)
  *   --expect-chain-id &lt;n&gt;      abort if the node reports a different chainId (or set
- *                               RHIZOME_EXPECT_CHAIN_ID); the node's /info answer is
- *                               unauthenticated, so pin the chain you intend to sign for
+ *                               RHIZOME_EXPECT_CHAIN_ID); overrides and re-pins the TOFU pin
+ *   --plaintext                 keygen only: permit an UNENCRYPTED key file in non-interactive
+ *                               mode (or set RHIZOME_WALLET_PLAINTEXT=1)
+ *
+ * Chain-id pinning (trust on first use): the first send/deploy/call/... records the node's
+ * chainId and URL in the key file; any later node reporting a different chainId aborts the
+ * command, so a hostile node cannot replay your signature onto another chain (audit F2). On an
+ * encrypted key file the pin is sealed INSIDE the encrypted payload — writing it requires the
+ * passphrase, so it cannot be forged with mere file write access. Read-only commands
+ * (balance, *-show, *-list, call-readonly) never touch the pin.
  * </pre>
  */
 public final class WalletCli {
@@ -68,9 +75,9 @@ public final class WalletCli {
     }
 
     private static void keygen(String[] args) throws Exception {
-        require(args, 2, "keygen <keyfile> [--passphrase-file <path>]");
+        require(args, 2, "keygen <keyfile> [--passphrase-file <path>] [--plaintext]");
         Wallet wallet = Wallet.create();
-        wallet.save(Path.of(args[1]), passphraseFromFlag(args));
+        wallet.save(Path.of(args[1]), passphraseFromFlag(args), hasFlag(args, "--plaintext"));
         System.out.println("Created wallet " + args[1]);
         System.out.println("Address: " + wallet.address().toHexString());
     }
@@ -101,7 +108,7 @@ public final class WalletCli {
         echoPdn("amount", amount.amount());
         echoPdn("fee", fee.amount());
 
-        int chainId = verifiedChainId(client, args);
+        int chainId = verifiedChainId(client, args, wallet);
         long nonce = client.walletInfo(wallet.address()).nextNonce();
         Transaction tx = wallet.signedSend(to, amount, fee, chainId, nonce, System.currentTimeMillis());
 
@@ -127,7 +134,7 @@ public final class WalletCli {
 
         long nonce = client.walletInfo(wallet.address()).nextNonce();
         Transaction tx = wallet.signedContract(TransactionKind.DEPLOY, PublicAddress.empty(),
-            code, 0, gasLimit, gasPrice, verifiedChainId(client, args), nonce, System.currentTimeMillis());
+            code, 0, gasLimit, gasPrice, verifiedChainId(client, args, wallet), nonce, System.currentTimeMillis());
         String status = client.submit(tx);
         System.out.println("contract: " + Contracts.deriveAddress(wallet.address(), nonce).toHexString());
         System.out.println("status: " + status);
@@ -148,7 +155,7 @@ public final class WalletCli {
 
         long nonce = client.walletInfo(wallet.address()).nextNonce();
         Transaction tx = wallet.signedContract(TransactionKind.CALL, contract,
-            input, 0, gasLimit, gasPrice, verifiedChainId(client, args), nonce, System.currentTimeMillis());
+            input, 0, gasLimit, gasPrice, verifiedChainId(client, args, wallet), nonce, System.currentTimeMillis());
         String status = client.submit(tx);
         System.out.println("txid: " + tx.hashContents().toHexString());
         System.out.println("status: " + status);
@@ -174,7 +181,7 @@ public final class WalletCli {
 
         long nonce = client.walletInfo(wallet.address()).nextNonce();
         var tx = wallet.signedBox(TransactionKind.BOX_CREATE, owner, data, value, fee,
-            verifiedChainId(client, args), nonce, System.currentTimeMillis());
+            verifiedChainId(client, args, wallet), nonce, System.currentTimeMillis());
         String status = client.submit(tx);
         System.out.println("box: " + Utils.bytesToHex(rhizome.core.box.Box.deriveId(wallet.address(), nonce)));
         System.out.println("status: " + status);
@@ -197,7 +204,7 @@ public final class WalletCli {
 
         long nonce = client.walletInfo(wallet.address()).nextNonce();
         var tx = wallet.signedBox(TransactionKind.BOX_UPDATE, wallet.address(), data, topup, fee,
-            verifiedChainId(client, args), nonce, System.currentTimeMillis());
+            verifiedChainId(client, args, wallet), nonce, System.currentTimeMillis());
         String status = client.submit(tx);
         System.out.println("box: " + args[3]);
         System.out.println("status: " + status);
@@ -218,7 +225,7 @@ public final class WalletCli {
 
         long nonce = client.walletInfo(wallet.address()).nextNonce();
         var tx = wallet.signedBox(TransactionKind.BOX_SPEND, wallet.address(), data, 0, fee,
-            verifiedChainId(client, args), nonce, System.currentTimeMillis());
+            verifiedChainId(client, args, wallet), nonce, System.currentTimeMillis());
         String status = client.submit(tx);
         System.out.println("box: " + args[3]);
         System.out.println("status: " + status);
@@ -263,7 +270,7 @@ public final class WalletCli {
 
         long nonce = client.walletInfo(wallet.address()).nextNonce();
         var tx = wallet.signedToken(TransactionKind.TOKEN_MINT, wallet.address(), data, fee,
-            verifiedChainId(client, args), nonce, System.currentTimeMillis());
+            verifiedChainId(client, args, wallet), nonce, System.currentTimeMillis());
         String status = client.submit(tx);
         System.out.println("token: " + Utils.bytesToHex(
             rhizome.core.token.TokenMeta.deriveId(wallet.address(), nonce)));
@@ -296,7 +303,7 @@ public final class WalletCli {
         echoPdn("fee", fee);
 
         long nonce = client.walletInfo(wallet.address()).nextNonce();
-        var tx = wallet.signedToken(kind, to, data, fee, verifiedChainId(client, args), nonce, System.currentTimeMillis());
+        var tx = wallet.signedToken(kind, to, data, fee, verifiedChainId(client, args, wallet), nonce, System.currentTimeMillis());
         String status = client.submit(tx);
         System.out.println("token: " + tokenIdHex);
         System.out.println("status: " + status);
@@ -429,38 +436,115 @@ public final class WalletCli {
      * The key-file passphrase from {@code --passphrase-file <path>}, or null to fall back to the
      * console prompt / env var inside {@link Wallet} (audit F3). A trailing newline is stripped so
      * the file can be produced by {@code echo} or an editor; the wallet wipes the array after use.
+     * The passphrase never transits through an immutable String: the file bytes are decoded
+     * straight into a {@code char[]} and the byte buffer is wiped (audit F4).
      */
     private static char[] passphraseFromFlag(String[] args) throws java.io.IOException {
         String path = flag(args, "--passphrase-file");
         if (path == null) {
             return null;
         }
-        String content = Files.readString(Path.of(path), StandardCharsets.UTF_8);
-        int end = content.length();
-        while (end > 0 && (content.charAt(end - 1) == '\n' || content.charAt(end - 1) == '\r')) {
-            end--;
+        byte[] bytes = Files.readAllBytes(Path.of(path));
+        try {
+            // CR/LF are single bytes in UTF-8, so trailing-newline stripping is safe at byte level.
+            int end = bytes.length;
+            while (end > 0 && (bytes[end - 1] == '\n' || bytes[end - 1] == '\r')) {
+                end--;
+            }
+            return WalletKeystore.utf8Decode(bytes, end);
+        } finally {
+            java.util.Arrays.fill(bytes, (byte) 0);
         }
-        return content.substring(0, end).toCharArray();
     }
 
     /**
-     * The chainId reported by the node, aborting if it differs from the operator's expectation
-     * ({@code --expect-chain-id} or {@code RHIZOME_EXPECT_CHAIN_ID}). The wallet signs whatever
-     * chainId the node answers over an unauthenticated channel, so without a pinned expectation a
-     * hostile/MITM'd node can steer the signature onto a different chain (audit F2).
+     * The chainId the wallet will sign for, enforcing trust-on-first-use: the key file records
+     * the chainId (and node URL) of the first node it ever signed with, and any later node
+     * reporting a DIFFERENT chainId is refused — the node's /info answer is unauthenticated, so
+     * without pinning a hostile/MITM'd node can steer the signature onto another chain and
+     * replay it there (audit F2). {@code --expect-chain-id} (or {@code RHIZOME_EXPECT_CHAIN_ID})
+     * overrides the pin and re-pins. First contact pins and announces the chainId on stderr.
+     * Read-only commands (balance, *-show, *-list, call-readonly) never touch the pin.
      */
-    private static int verifiedChainId(WalletClient client, String[] args) {
-        int chainId = client.chainId();
+    private static int verifiedChainId(WalletClient client, String[] args, Wallet wallet)
+            throws java.io.IOException {
+        int nodeChainId = client.chainId();
         String expected = flag(args, "--expect-chain-id");
         if (expected == null) {
             expected = System.getenv("RHIZOME_EXPECT_CHAIN_ID");
         }
-        if (expected != null && !expected.isEmpty() && Integer.parseInt(expected) != chainId) {
-            System.err.println("ERROR: node reports chainId " + chainId + " but " + expected
-                + " was expected (--expect-chain-id / RHIZOME_EXPECT_CHAIN_ID); refusing to sign.");
+        Path keyFile = Path.of(args[2]);
+        // The pin comes from the LOADED wallet: on an encrypted key file it is sealed inside
+        // the GCM payload, so reading it requires the passphrase already resolved at load
+        // (a legacy cleartext pin next to the envelope is still surfaced by load).
+        Wallet.TofuPin pin = wallet.chainIdPin();
+        ChainIdDecision decision;
+        try {
+            decision = decideChainId(nodeChainId, expected, pin);
+        } catch (ChainIdMismatchException e) {
+            System.err.println("ERROR: " + e.getMessage());
             System.exit(1);
+            return -1; // unreachable: System.exit does not return
         }
-        return chainId;
+        if (decision.pin()) {
+            // Persisting the (re-)pin on an encrypted key file re-seals the payload, which
+            // needs the passphrase — re-resolve it through the same helper used at load. If it
+            // is not resolvable the command FAILS before signing: a first-use/override pin that
+            // cannot be persisted would leave the wallet silently unpinned (TOFU downgrade),
+            // which is worse than aborting (an already-correct pin never reaches this branch).
+            char[] pinPass = passphraseFromFlag(args);
+            try {
+                wallet.saveChainIdPin(keyFile, nodeChainId, args[1], pinPass);
+            } finally {
+                if (pinPass != null) {
+                    java.util.Arrays.fill(pinPass, '\0');
+                }
+            }
+            if (pin == null && (expected == null || expected.isEmpty())) {
+                System.err.println("pinned chainId " + nodeChainId + " (node " + args[1] + ") in "
+                    + keyFile + " — first use, trust-on-first-use: a different chainId from any "
+                    + "future node will abort signing (override with --expect-chain-id).");
+            }
+        }
+        return decision.chainId();
+    }
+
+    /** Outcome of the TOFU chainId check: the chainId to sign with, and whether to (re-)pin it. */
+    record ChainIdDecision(int chainId, boolean pin) {}
+
+    /** The node answered a chainId the operator (or the TOFU pin) did not agree to sign for. */
+    static final class ChainIdMismatchException extends RuntimeException {
+        ChainIdMismatchException(String message) {
+            super(message);
+        }
+    }
+
+    /**
+     * Pure TOFU decision, split out for testing: explicit expectation > existing pin > first
+     * contact. An explicit expectation that MATCHES the node overrides and re-pins; a pin that
+     * differs from the node's answer is a hard failure.
+     */
+    static ChainIdDecision decideChainId(int nodeChainId, String expected, Wallet.TofuPin pin) {
+        if (expected != null && !expected.isEmpty()) {
+            if (Integer.parseInt(expected) != nodeChainId) {
+                throw new ChainIdMismatchException("node reports chainId " + nodeChainId + " but "
+                    + expected + " was expected (--expect-chain-id / RHIZOME_EXPECT_CHAIN_ID); "
+                    + "refusing to sign.");
+            }
+            return new ChainIdDecision(nodeChainId, true); // explicit override re-pins
+        }
+        if (pin == null) {
+            return new ChainIdDecision(nodeChainId, true); // first contact: pin (TOFU)
+        }
+        if (pin.chainId() != nodeChainId) {
+            throw new ChainIdMismatchException("node reports chainId " + nodeChainId
+                + " but this keyfile is pinned to chainId " + pin.chainId()
+                + (pin.nodeUrl() != null && !pin.nodeUrl().isEmpty()
+                    ? " (first seen at " + pin.nodeUrl() + ")" : "")
+                + "; signing could replay the transaction onto a different chain. Pass "
+                + "--expect-chain-id " + nodeChainId + " to override and re-pin.");
+        }
+        return new ChainIdDecision(nodeChainId, false);
     }
 
     private static boolean insecureSchemeWarned;
@@ -525,6 +609,12 @@ public final class WalletCli {
                                           else RHIZOME_WALLET_PASSPHRASE (last resort: env vars are
                                           visible in /proc/<pid>/environ)
                 --expect-chain-id <n>     abort if the node reports a different chainId
-                                          (or set RHIZOME_EXPECT_CHAIN_ID)""");
+                                          (or set RHIZOME_EXPECT_CHAIN_ID); overrides and re-pins
+                                          the keyfile's trust-on-first-use chainId pin
+                --plaintext               keygen only: permit an UNENCRYPTED key file when
+                                          non-interactive (or set RHIZOME_WALLET_PLAINTEXT=1)
+              chain-id pinning: the first signing command records the node's chainId+URL in the
+                                          keyfile (trust on first use); a different chainId later
+                                          aborts signing. Read-only commands never pin.""");
     }
 }
